@@ -1,3 +1,8 @@
+Thu Oct 14 13:33:45 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * TAO_IDL/driver/drv_preproc.cpp:
+          Cleanup I forgot.
+
 Thu Oct 14 13:21:45 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
         * TAO_IDL/driver/drv_preproc.cpp:
